--- a/CSS Assignments/text-prop.html
+++ b/CSS Assignments/text-prop.html
@@ -51,6 +51,12 @@
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
+    </div><br>
+    <div class="task-17">
+        <div class="anim-box"></div>
+    </div>
+    <div class="task-18">
+        <div class="anim-box2"></div>
     </div>
 
     
