add teachers app

--- a/HTML Assignments/students-app/index.html
+++ b/HTML Assignments/students-app/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="inputs">
                 <label for="age" class="age-lbl">Age:</label>
-                <input type="number" name="age" min="18" max="35">
+                <input type="number" name="age" min="18" max="35" onkeydown="return false">
             </div>
             <input type="button" class="btn" value="Save">
         </form>
